# makemore

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
nbs/: 1_mlp.ipynb  2_batchnorm.ipynb  3_backprop.ipynb  4_wavenet.ipynb  bigram.ipynb  build.ipynb  mlp.ipynb
