[tool.poetry]
name = "makemore"
version = "0.1.0"
description = ""
authors = ["Josh Wiley <josh@cloudbend.dev>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.4.6"
black = "^22.8.0"
mypy = "^0.971"
pylint = "^2.15.2"
pytest = "^7.1.3"
torch = "^1.12.1"
torchvision = "^0.13.1"
torchaudio = "^0.12.1"
matplotlib = "^3.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
